feat: add template variable

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-  <h1>Welcome to site!</h1>
+  <h1>Welcome to site! {{ my_var }}</h1>
   <img src="../static/m.jpg" alt="a beautiful pic">
 </body>
 </html>
