feat: add template variable

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,7 @@
 <body>
   <h1>Welcome to site! {{ my_var }}</h1>
   <h2>{{ letters }}</h2>
+  <h2>{{ some_dict['name'] }}</h2>
   <img src="../static/m.jpg" alt="a beautiful pic">
 </body>
 </html>
