--- a/templates/index.html
+++ b/templates/index.html
@@ -5,19 +5,12 @@
     <title>Title</title>
 </head>
 <body>
-  <h1>Welcome to site! {{ my_var }}</h1>
-  <h2>{{ letters }}</h2>
-  <h2>{{ some_dict['name'] }}</h2>
   <img src="../static/m.jpg" alt="a beautiful pic">
-    <ul>
-        {% for letter in letters %}
-        <li>{{ letter }}</li>
-        {% endfor %}
-    </ul>
-{% if 'o' in letters %}
-    <p>"o" is in {{ letters }} </p>
+
+{% if user_logged_in %}
+    <p>Welcome to site!</p>
 {% else %}
-    <p>"o" is not in letters</p>
+    <p>Please, log in.</p>
 {% endif %}
 </body>
 </html>
