--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a href="#" class="navbar-brand">Puppies Rock!</a>
+    <a href="{{ url_for('index') }}" class="navbar-brand">Puppies Rock!</a>
 </nav>
 
 {% block content %}
