--- a/templates/index.html
+++ b/templates/index.html
@@ -1,16 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-  <img src="../static/m.jpg" alt="a beautiful pic">
+{% extends 'base.html' %}
+{% block content %}
+<div>
+    <p>Welcome</p>
+    <p>Sing up here:</p>
+    <a href="{{ url_for('signup_form') }}">Sign up</a>
+</div>
+{% endblock %}
+
+<img src="../static/m.jpg" alt="a beautiful pic">
 
 {% if user_logged_in %}
     <p>Welcome to site!</p>
 {% else %}
     <p>Please, log in.</p>
 {% endif %}
-</body>
-</html>
