add data to html

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,15 +1,17 @@
-<link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
-<p>
-    {% if breed %}
-    The breed you entered is "{{ breed }}".
-    Update it in the form below🧮:
-    {% else %}
-    Please enter your breed: 
-    {% endif %}
-</p>
-
+<h1>Welcome to the puppy survey</h1>
 <form method="POST">
-{{ form.hidden_tag() }} <!--adds a cross-site request forgery token to protect our forms from attacks-->
-{{ form.breed.label }} {{ form.breed(class='form-class') }}
+{{ form.hidden_tag() }} 
+{{ form.breed.label }} {{ form.breed }}
+<br>
+{{ form.neutered.label }} {{ form.neutered }}
+<br>
+{{ form.food_choice.label }} {{ form.food_choice }}
+<br>
+{{ form.mood.label }} {{ form.mood }}
+<br>
+Any other feedback?
+<br>
+{{ form.feedback }}
+<br>
 {{ form.submit() }}
 </form>
