--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,5 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>Homepage</h1>
-<h2>Go to /puppy/name</h2>
+    <h1>Welcome</h1>
 {% endblock %}
