--- a/templates/list.html
+++ b/templates/list.html
@@ -5,7 +5,7 @@
         <h1>List of available puppies:</h1>
         <ul>
             {% for pup in puppies %}
-            <li>{{ pup }}</li>
+            <li>{{pup.id}} {{ pup }}</li>
             {% endfor %}
         </ul>
         
