--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,7 @@
         <a href="{{ url_for('index') }}" class="nav-item nav-link">Home</a>
         <a href="{{ url_for('add_pup') }}" class="nav-item nav-link">Add Pup</a>
         <a href="{{ url_for('list_pup') }}" class="nav-item nav-link">List of Pups</a>
+        <a href="{{ url_for('add_owner') }}" class="nav-item nav-link">Add Owner</a>
         <a href="{{ url_for('del_pup') }}" class="nav-item nav-link">Delete Pup</a>
 
     </div>
