add base view if user logged in

--- a/LoginProjectAndOAuth/myproject/templates/base.html
+++ b/LoginProjectAndOAuth/myproject/templates/base.html
@@ -12,7 +12,13 @@
 </head>
 <body>
     <ul>
-        <li class="nav-link" href="{{ url_for('home') }}">Home</li>
+        <li class="nav-link"><a href="{{ url_for('home') }}">Home</a></li>
+        {% if current_user.is_authenticated %}
+        <li class="nav-link"><a href="{{ url_for('logout') }}">Logout</a></li>
+        {% else %}
+        <li class="nav-link"><a href="{{ url_for('login') }}">Login</a></li>
+        <li class="nav-link"><a href="{{ url_for('register') }}">Register</a></li>
+        {% endif %}
     </ul>   
 
 </body>
