--- a/BlogPostCompanyProject/puppycompanyblog/templates/account.html
+++ b/BlogPostCompanyProject/puppycompanyblog/templates/account.html
@@ -7,7 +7,7 @@
         <img align='center' src="{{url_for('static', filename='profile_pics/'+current_user.profile_image)}}"  alt="profile picture" />
     </div>
     <div class="container">
-        <form method="POST">
+        <form method="POST" action="" enctype="multipart/form-data">
             {{form.hidden_tag()}}
             <div class="form-group">
                 {{form.username.label(class='form-group')}}{{form.username(class='form-control')}}
