--- a/BlogPostCompanyProject/puppycompanyblog/templates/blog_post.html
+++ b/BlogPostCompanyProject/puppycompanyblog/templates/blog_post.html
@@ -16,7 +16,7 @@
 
 </div>
 
-<div class="modal" tabindex="-1" role="dialog">
+<div class="modal" tabindex="-1" role="dialog" id="del_model" >
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
