--- a/BlogPostCompanyProject/puppycompanyblog/templates/error_pages/403.html
+++ b/BlogPostCompanyProject/puppycompanyblog/templates/error_pages/403.html
@@ -1,8 +1,6 @@
 {% extends "base.html" %}
-
 {% block content %}
-<div class="jumbotron">
-    <h1>Error 403. Access forbidden!</h1>
-</div>
-  
+  <div class="jumbotron">
+    <h1>403 Access Forbidden!</h1>
+  </div>
 {% endblock %}
