--- a/BlogPostCompanyProject/puppycompanyblog/templates/index.html
+++ b/BlogPostCompanyProject/puppycompanyblog/templates/index.html
@@ -3,6 +3,8 @@
   <div class="jumbotron">
     <h1>Puppy Company Blog</h1>
     <p>Welcome to Our Company's Blog Page</p>
+    <h2>hostname: {{ HOSTNAME }}</h2>
+    <h2>IP: {{ IP }}</h2>
   </div>
 
   <div class="container">
